[package]
name = "solution"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0"
rand = "0.8"
log = "0.4"
pretty_env_logger = "0.4"
tempfile = "3"
