[package]
name = "topkstr"
version = "0.1.0"
authors = ["Hongqin-Li <ihongqinli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
map_store = { path = "../map-store" }
anyhow = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0"
rand = "0.7.3"
log = "0.4"
pretty_env_logger = "0.4"
tempfile = "3"
seahash = "4.0.1"
statrs = "0.13.0"
